--- a/server/build.gradle
+++ b/server/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
 }
 
-
 sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = ["src/"]
 repositories {
@@ -20,6 +19,7 @@ jar {
 dependencies {
     compile group: 'kryonet', name: 'kryonet', version: '2.21'
     compile group: 'com.esotericsoftware', 'name': 'kryo', version: '5.0.0-RC4'
+    implementation project(":network")
 }
 
 task fatJar(type: Jar) {
