--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ com_crashlytics_export_strings.xml
 
 /build/
 /android/build/
+/server/build/
+/network/build/
 /core/build/
 /desktop/build/
 /html/build/
