--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,8 +17,11 @@ jar {
 }
 
 dependencies {
-    compile group: 'kryonet', name: 'kryonet', version: '2.21'
-    compile group: 'com.esotericsoftware', 'name': 'kryo', version: '5.0.0-RC4'
+    implementation (group: 'kryonet', name: 'kryonet', version: '2.21') {
+        exclude group: 'com.esotericsoftware.reflectasm', module: 'reflectasm'
+        exclude group: 'com.esotericsoftware.minlog', module: 'minlog'
+    }
+    implementation group: 'com.esotericsoftware', 'name': 'kryo', version: '5.0.0-RC4'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
     compile project(":network")
