--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ Thumbs.db
 !/ios-moe/xcode/*.xcodeproj/xcshareddata
 !/ios-moe/xcode/*.xcodeproj/project.pbxproj
 /ios-moe/xcode/native/
+/android/assets/Sprites/SteamEmu/stats.ini
