--- a/server/build.gradle
+++ b/server/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation group: 'com.esotericsoftware', 'name': 'kryo', version: '5.0.0-RC4'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.9'
     compile project(":network")
 }
 
